# Logprep

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .trivyignore  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  Dockerfile  MANIFEST.in  Makefile  README.md  benchmark.py  benchmark.sh  config_manipulator.py  create_pex.yml  error_file  flake.nix  index.yaml  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  review.ipynb  run_benchmarks.py  run_config_manipulation.py  setup.cfg  setup.py  todo.md  tox.ini  trivy.yaml  versioneer.py
.devcontainer/: Dockerfile  base.Dockerfile  devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-examples.yml  ci.yml  code-quailty.yml  code-quality.yml  container-build.yml  main.yml  publish-latest-dev-release-to-github.yml  publish-latest-dev-release-to-pypi.yml  publish-release-to-pypi.yml  push-mirror.yml  testing.yml  update-trivy-cache-daily.yml  weekly-build-of-last-release.yml
.semgrep_rules/logprep_specific/: processor-rules.yml
benchmark_results/20260309_231610/: asyncNG_python3.11.txt  nonNG_python3.11.txt
benchmark_results/20260309_232743/: asyncNG_python3.11.txt  nonNG_python3.11.txt
benchmark_results/20260310_114644/: asyncNG_python3.11.txt  asyncNG_python3.12.txt  asyncNG_python3.13.txt  asyncNG_python3.14.txt  nonNG_python3.11.txt  nonNG_python3.12.txt  nonNG_python3.13.txt  nonNG_python3.14.txt
charts/logprep/: Chart.yaml  Chart.yaml.j2  values.yaml
charts/logprep/templates/: _helpers.tpl  artifacts.yaml  configurations.yaml  deployment.yaml  error-output-config.yaml  exporter-config.yaml  exporter-service.yaml  gateway.yaml  http-input-service.yaml  input-config.yaml  logger-config.yaml  metrics-config.yaml  metrics-service.yaml  output-config.yaml  podmonitor.yaml  service-account.yaml  virtual-service.yaml
charts/logprep/tests/: README.md  deployment_test.yaml
doc/: README.md  requirements.txt
doc/source/: conf.py  getting_started.rst  index.rst  installation.rst  modules.rst  testcase-renderer.tmpl
examples/compose/: docker-compose.legacy-metrics.yml  docker-compose.yml
examples/k8s/: Chart.yaml  values-dev.yaml  values.yaml
load_tester/: README.md  requirements.txt
load_tester/load_tester/: document_loader.py  document_sender.py  kafka_connector.py  process_runner.py  run_load_tester.py  util.py
load_tester/tests/: test_configuration.py  test_document_loader.py  test_document_sender.py  test_process_runner.py  test_util.py
logprep/: _version.py  call_once.py  configuration.py  factory.py  factory_error.py  pipeline_component_factory.py  registry.py  run_logprep.py  run_ng.py  runner.py
logprep/abc/: __init__.py  component.py  connector.py  controller.py  credentials.py  event.py  exceptions.py  getter.py  input.py  metric.py  output.py  processor.py  rule_loader.py
logprep/connector/: confluent_kafka.py  confluent_kafka_input.py  confluent_kafka_output.py  confluent_kafka_shared.py  connector_configuration.py  connector_factory.py  connector_factory_error.py  connector_registry.py
logprep/event/: error_event.py  filtered_event.py  log_event.py  pseudonym_event.py  set_event_backlog.py  sre_event.py
logprep/filter/: lucene_filter.py
logprep/framework/: metric.py  metric_exposer.py  metric_targets.py  pipeline.py  pipeline_manager.py
logprep/generator/: controller.py  factory.py  input.py  loader.py  manipulator.py  sender.py
logprep/input/: confluent_kafka_input.py  dummy_input.py  input.py  json_input.py  jsonl_input.py
logprep/metrics/: exporter.py  metric.py  metric_exposer.py  metric_targets.py  metrics.py
logprep/ng/: event.py  event_state.py  manager.py  pipeline.py  runner.py  sender.py  workflow.py
logprep/output/: confluent_kafka_output.py  console_output.py  dummy_output.py  es_output.py  os_output.py  output.py  writing_output.py
logprep/processor/: processor_configuration.py  processor_factory.py  processor_factory_error.py  processor_registry.py  processor_strategy.py
logprep/util/: aggregating_logger.py  ansi.py  auto_rule_corpus_tester.py  auto_rule_tester.py  cache.py  configuration.py  context_managers.py  converters.py  credentials.py  custom_types.py  decorators.py  defaults.py  dotted_template.py  environ.py  event.py  generic_utils.py  getter.py  graph.py  grok_pattern_loader.py  hasher.py  helper.py  http.py  input_common.py  json_handling.py  log_aggregator.py  logging.py  logging_utils.py  multiprocessing_log_handler.py  pipeline_profiler.py  pre_detector_rule_matching_tester.py  preprocessor.py  processor_generator.py  processor_stats.py  prometheus_exporter.py  queue.py  rule_dry_runner.py  rule_loader.py  schema_and_rule_checker.py  ssl.py  tag_yaml_loader.py  (+9 more)
notebooks/: concatenator.ipynb  dissecter.ipynb  field_manager.ipynb  key_checker.ipynb  performance_test_domain_resolver.ipynb
quickstart/: Dockerfile  docker-compose.yml  logstash.conf
rust/: lib.rs  main.rs
rust/generator/: mod.rs
rust/tests/: mod.rs
tests/: conftest.py
tests/acceptance/: conftest.py  test_acceptance.py  test_amides.py  test_config_refresh.py  test_error_output.py  test_file_input.py  test_full_configuration.py  test_full_message_pass_with_hmac.py  test_http_input.py  test_http_input_with_requests.py  test_multiple_outputs.py  test_pre_detection.py  test_preprocessing.py  test_preprocessors.py  test_selective_extractor_full_pipeline_pass.py  test_wineventlog_normalization.py  test_wineventlog_processing.py  test_wineventlog_pseudonymization.py  util.py
tests/performance/: test_grok.py
tests/testdata/: ConfigurationForTest.py  FilledTempFile.py  kafka_stats_return_value.json  metadata.py  ruledata.py
tests/unit/: test_configuration.py  test_custom_types.py  test_factory.py  test_quickstart.py  test_registry.py  test_run_logprep.py  test_run_ng.py  test_runner.py
tests/util/: testhelpers.py
(+1446 files in other folders)
