[build-system]
requires = [
  "uv_build>=0.11.6,<0.12"
]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "logprep"
module-root = ""

[project]
name = "logprep"
description = "Logprep allows to collect, process and forward log messages from various data sources."
requires-python = ">=3.11"
readme = "README.md"
version = "19.2.0"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Information Technology",

  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",

  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",

  "Operating System :: POSIX :: Linux",

  "Topic :: Security",
  "Topic :: System :: Logging",
]
keywords = [
  "kafka",
  "etl",
  "sre",
  "preprocessing",
  "opensearch",
  "soar",
  "logdata",
]
dependencies = [
  "attrs<26",
  "confluent-kafka>2,<3",
  "filelock<4",
  "geoip2>=5.2.0,<6", # Setuptools has been replaced with 5.2.0 (CVE)
  "jsonref<2",
  "luqum<2",
  "numpy>=1.26.0,<3",
  "opensearch-py[async]>=3.2,<4", # [>=3.2]: #904
  "prometheus_client<1",
  "pycryptodome<4",
  "pyparsing<4",
  "scikit-learn>=1.2.0,<2",
  "joblib<2",
  "requests>=2.33.0,<3", # [>=2.33.0]: CVE-2026-25645
  "ruamel.yaml<1",
  "schedule<2",
  "urllib3>=2.7.0,<3", # [>=2.7.0]: CVE-2026-44431, CVE-2026-44432
  "uvicorn<1",
  "msgspec<1",
  "boto3<2",
  "click<9",
  "falcon>=3.1.3,<5",
  "uvloop<1",
  "httptools<1",
  "more-itertools>=11.1.0",
]

[project.optional-dependencies]

dev = [
  "black>=26.0.0",
  "isort",
  "pylint",
  "pytest",
  "pytest-cov",
  "pytest-aiohttp",
  "aioresponses",
  "responses",
  "jinja2",
  "cibuildwheel",
  "asgiref",
  "pytest-asyncio",
  "pre-commit",
  "mypy>=1.18.2",
  "psutil",
  "types-requests",
  "types-psutil",
  "types-PyYaml",
  "deepdiff>=8.6.2,<9", # [>=8.6.2]: CVE-2026-33155
]

doc = [
  "sphinx>=8.2.0,<9",
  "sphinx_rtd_theme",
  "sphinxcontrib.datatemplates",
  "sphinxcontrib-mermaid",
  "sphinx-copybutton",
  "nbsphinx>=0.9",
  "ipython>=8.7",
  "openpyxl",
  "pandas<3",
]

[project.urls]
Homepage = "https://github.com/fkie-cad/Logprep"
Documentation = "https://logprep.readthedocs.io/en/latest/"
Repository = "https://github.com/fkie-cad/Logprep"
Issues = "https://github.com/fkie-cad/Logprep/issues"
Changelog = "https://github.com/fkie-cad/Logprep/blob/main/CHANGELOG.md"

[project.scripts]
logprep = "logprep.run_logprep:cli"
logprep-ng = "logprep.run_ng:cli"

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313', 'py314']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  __version__\.py
)
'''

[tool.isort]
profile = "black"

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "*pp* *i686-unknown-linux-musl*"

[tool.pylint.MAIN]
ignore = ".venv"
fail-under = 9.5

[tool.pylint.FORMAT]
max-line-length=100

[tool.pylint.BASIC]
no-docstring-rgx="^test_|^.*TestCase|^_|^Test"

[tool.pylint."MESAGES CONTROL"]
disable="too-few-public-methods,unsupported-membership-test"

[tool.pylint.DESIGN]
min-public-methods=1
max-public-methods=40
max-attributes=12

[tool.pylint.CLASSES]

# List of method names used to declare (i.e. assign) instance attributes.
defining-attr-methods="__init__,__new__,setup,_setup"

[tool.mypy]
# use imported type information but don't report issues if not a file under check
follow_imports = "silent"
exclude = "tests/.*"

# Evidently looking at dev Packages, they are installed, mypy doesnt seem to think so
[[tool.mypy.overrides]]
module = ["requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["joblib.*", "boto3.*", "botocore.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["confluent_kafka.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["luqum.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# automatically run async test_* methods as test (instead of @pytest.mark.asyncio)
asyncio_mode = "auto"

# https://pytest-asyncio.readthedocs.io/en/stable/reference/configuration.html#asyncio-default-fixture-loop-scope
asyncio_default_fixture_loop_scope = "session"
